--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cls && tsc && node js/index.js"
+    "start": "cls && tsc && node js/index.js",
+    "dev": "nodemon  --watch src  --exec ts-node --files src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "nodemon": "^2.0.4",
   }
 }
