--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cls && tsc && node js/index.js",
-    "dev": "nodemon  --watch src  --exec ts-node --files src/app.ts"
+    "dev": "nodemon  --watch ts  --exec ts-node --files ts/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
-    "typescript": "^3.9.6",
     "nodemon": "^2.0.4",
+    "typescript": "^3.9.6"
   }
 }
