--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "mysql": "^2.18.1",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^5.12.2",
+    "sequelize-typescript": "^1.0.0-beta.3"
   },
   "devDependencies": {
     "@types/node": "^14.0.14",
