--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "koa-static": "^5.0.0",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "mysql2": "^2.1.0",
     "sequelize": "^5.12.2",
     "sequelize-typescript": "^1.0.0-beta.3"
   },
