--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "koa-router": "^9.4.0",
     "koa-static": "^5.0.0",
     "mysql": "^2.18.1",
+    "koa-redis": "^4.0.1",
+    "koa-generic-session": "^2.1.1",
     "reflect-metadata": "^0.1.13",
     "mysql2": "^2.1.0",
     "sequelize": "^5.12.2",
